feat: Add method to handle Mentee registration updates and improve service logic
- Introduced `withMentee(Mentee mentee)` method in `MenteeRegistration` to facilitate updates during persistence.
- Enhanced `saveRegistration` logic in `MenteeService` to handle filtered registrations and streamline mentee/application creation.
- Updated integration tests to align with refined registration workflows and member type assignments.